Found that when going to a new page on mobile, the page loads with a massive menu icon at the top, which then disappears after refreshing. Hoping hardcoding the dimensions will prevent that

--- a/src/components/Contentful/sass/components/_contentful_mobile_menu.scss
+++ b/src/components/Contentful/sass/components/_contentful_mobile_menu.scss
@@ -6,6 +6,11 @@
     height: 36px;
     right: 30px;
     top: 31px;
+
+    .bm-icon {
+      width: 33px;
+      height: 36px;
+    }
   }
   
   /* Color/shape of burger icon bars */
